# vectorization-exercises-1

./: CMakeLists.txt  README.md  avecmm.sln  avecmm.vcxproj  basemain.c  submm.c
